# arduino-stream-team

./: Makefile  README.md  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  arduino-stream-team.in
src/streamteam/: Makefile  Makefile.in  streamteam.py
